@@ -1,3 +1,7 @@
+2002-02-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/ia64/dl-tls.h: New file.
+
 2002-02-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/alpha/dl-machine.h (elf_machine_load_address, RTLD_START):
